MO2MP-1824:Dashboard alignment issue in Firefox

--- a/src/app/sign-up/dashboard/dashboard.component.scss
+++ b/src/app/sign-up/dashboard/dashboard.component.scss
@@ -393,6 +393,11 @@ app-dashboard {
               .widget-portfolio-body {
                 padding:0px 18px 11px;
               }
+              @-moz-document url-prefix() {
+                .widget-portfolio-body {
+                    min-width: 350px;
+                }
+              }  
               .widget-portfolio-right-section {
                 padding-left:15px;
               }
